--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,4 +23,4 @@ RUN mkdir -p models uploads logs
 EXPOSE 8000
 
 # Default command (only for API container)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
