--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,10 +3,12 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including libmagic
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
+    libmagic1 \
+    libmagic-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
